Add image release callback to TransferToImageBitmap

Bug: 807742
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I4b51cdc093f914ca05801b301e55be124d52c3a1
Reviewed-on: https://chromium-review.googlesource.com/1015649
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Olivia Lai <xlai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551726}
Former-commit-id: 290d112f43196bcdda5ba3b22e9c6085c59bf245